--- a/public/about.html
+++ b/public/about.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
-<h1>An application for creating, managing and executing tests "TestGuru".</h1>
+<h1>An Приложение для создания, управления и выполнения тестов "TestGuru".</h1>
 <h2><a href="http://www.thinknetica.com" target="_blank">Online school Thinknetica</a></h2>
 </body>
 </html>
